# Fantactical

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Francesca Vanorder.gcs  LICENSE  Nur.gcs  README.md  fantactical_session_round1.json  fantactical_session_round3.json  run.sh  test_maneuvers.sh
.tangled/workflows/: ci.yml
docs/: ARCHITECTURE.md  DATA_MODEL.md  GCS_IMPORT.md  INJURY_PIPELINE.md  NETWORKING.md  PHASE_MACHINE.md  TESTING.md  UI_LAYOUT.md
src/: lib.rs  logging.rs  main.rs  settings.rs
src/client/: mod.rs
src/model/: gcs_import.rs  injury.rs  maneuver_legality.rs  mod.rs  rolls.rs
src/network/: mod.rs
src/server/: mod.rs
src/state/: history.rs
src/systems/: mod.rs  network.rs  persistence.rs  phase_machine.rs
src/ui/: battlemap.rs  mod.rs  panels.rs  roll_modal.rs  theme.rs
tests/: network_integration.rs
