[package]
name = "fantactical"
version = "0.1.0"
edition = "2021"
default-run = "fantactical"

[[bin]]
name = "fantactical"
path = "src/main.rs"

[[bin]]
name = "ftctl"
path = "src/bin/ftctl.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
bevy = { version = "0.15", default-features = false, features = [
    "bevy_render", "bevy_winit", "bevy_sprite", "bevy_asset",
    "bevy_core_pipeline", "bevy_gizmos", "bevy_state",
    "x11",
] }
bevy_egui = "0.32"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
rand = "0.8"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
as-raw-xcb-connection = "1"
rfd = "0.15"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
log = "0.4"

[dev-dependencies]
tempfile = "3"
